<resources>
    //App name
    <string name="app_name">Text-Stories</string>

    // 1) Profile
    <string name="profile">Profile</string>
    <string name="name_hint">First name</string>
    <string name="surname_hint">Last name</string>
    <string name="profile_add_photo">Add photo</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="birth_date">Birth of date</string>
    <string name="select_avatar">Select Your Avatar</string>
    <string name="something_wrong">Oops…Something wrong</string>
    <string name="error_added_photo">It seems that the photo can\'t be added at the moment. No worries. Just fill the rest of the profile. The photo you can add later.</string>

    // 2) Home
    <string name="home">Главная</string>

    // 3) Chats
    <string name="chats">Мессенджер</string>

    // 4) Add News
    <string name="add_record">Добавить запись</string>
    <string name="new_record">New record</string>

    // 5) Add chat
    <string name="add_chat">Новый чат</string>

    <string name="counters">Payment</string>
    <string name="search_games">Поиск игры</string>
    <string name="join_to_game">Присоединиться к игре</string>
    <string name="detailed_information">Подробная информация</string>
    <string name="choice_hero">Выбор героя</string>
    <string name="chat">Чат</string>
    <string name="name_counter">Спектакль: </string>
    <string name="number_counter">Место: </string>
    <string name="sum_price">Стоимость: </string>
    <string name="my_ticket">Мои билеты</string>
    <string name="perfomance">Спектакли</string>
    <string name="buy">КУПИТЬ</string>
    <string name="cancel">Cancel</string>
    <string name="title_sum">Всего спетаклей:</string>
    <string name="title_sum_price">Средняя цена спектакля:</string>

    <string name="notifications_data_push_channel_id">data_push_channel</string>
    <string name="notifications_data_push_channel_name">Data push channel</string>
    <string name="notifications_notification_push_channel_id">notification_push_channel</string>
    <string name="notifications_notification_push_channel_name">Notification push channel</string>

</resources>
