<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:gravity="center_vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/counterDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/counterDate"
            android:layout_alignStart="@id/counterDate"
            android:text="@string/name_counter"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#ff222222"
            app:layout_constraintStart_toStartOf="@id/counterDate"
            app:layout_constraintTop_toBottomOf="@id/counterDate" />

        <TextView
            android:id="@+id/numberCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLength="150"
            android:text="@string/number_counter"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="@id/nameCounter"
            app:layout_constraintTop_toBottomOf="@id/nameCounter" />

        <TextView
            android:id="@+id/countersName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/counterDate"
            android:layout_alignStart="@id/counterDate"
            android:layout_gravity="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/nameCounter"
            app:layout_constraintStart_toEndOf="@id/nameCounter"
            app:layout_constraintTop_toTopOf="@id/nameCounter" />

        <TextView
            android:id="@+id/countersNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLength="150"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/numberCounter"
            app:layout_constraintStart_toEndOf="@id/numberCounter"
            app:layout_constraintTop_toTopOf="@id/numberCounter" />

        <TextView
            android:id="@+id/pricePayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sum_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#ff222222"
            app:layout_constraintBottom_toBottomOf="@id/price"
            app:layout_constraintEnd_toStartOf="@id/price"
            app:layout_constraintTop_toTopOf="@id/price" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLength="150"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/countersNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/countersName" />

        <View
            android:id="@+id/v_divider_header"
            style="@style/DividerLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numberCounter" />

        <CheckBox
            android:id="@+id/buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_divider_header" />

        <View
            android:id="@+id/v_divider_header2"
            style="@style/DividerLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buy" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
