<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/counterDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/counterDate"
        android:layout_alignStart="@id/counterDate"
        android:text="@string/name_counter"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#ff222222"
        app:layout_constraintStart_toStartOf="@id/counterDate"
        app:layout_constraintTop_toBottomOf="@id/counterDate" />

    <TextView
        android:id="@+id/numberCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLength="150"
        android:text="@string/number_counter"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="@id/nameCounter"
        app:layout_constraintTop_toBottomOf="@id/nameCounter" />

    <TextView
        android:id="@+id/countersName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/counterDate"
        android:layout_alignStart="@id/counterDate"
        android:layout_gravity="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/nameCounter"
        app:layout_constraintStart_toEndOf="@id/nameCounter"
        app:layout_constraintTop_toTopOf="@id/nameCounter" />

    <TextView
        android:id="@+id/countersNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLength="150"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/numberCounter"
        app:layout_constraintStart_toEndOf="@id/numberCounter"
        app:layout_constraintTop_toTopOf="@id/numberCounter" />

    <TextView
        android:id="@+id/pricePayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sum_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#ff222222"
        app:layout_constraintBottom_toBottomOf="@id/price"
        app:layout_constraintEnd_toStartOf="@id/price"
        app:layout_constraintTop_toTopOf="@id/price" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLength="150"
        android:text="asd"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/countersNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/countersName" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:fabSize="normal"
        android:src="@drawable/icon_edit"
        app:layout_constraintStart_toStartOf="@id/pricePayment"
        app:layout_constraintTop_toBottomOf="@id/pricePayment"
        app:layout_anchorGravity="bottom|right|end" />

</androidx.constraintlayout.widget.ConstraintLayout>
